tests/negative/gold/static4-test.gold
tests/negative/static4-test.toit:6:10: error: Operators may not be static
  static operator == other:
         ^~~~~~~~~~~
tests/negative/static4-test.toit:7:5: error: Type mismatch. Expected 'bool'. Got 'string'
    return "static =="
    ^~~~~~
Compilation failed
